--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
     <title>Divistant - Sahabat Virtual untuk Hidup Lebih Sehat</title>
 </head>
 <body >
+<div class="side_menu">
+	<div class="burger_box">
+		<div class="menu-icon-container">
+			<a href="#" class="menu-icon js-menu_toggle closed">
+				<span class="menu-icon_box">
+					<span class="menu-icon_line menu-icon_line--1"></span>
+					<span class="menu-icon_line menu-icon_line--2"></span>
+					<span class="menu-icon_line menu-icon_line--3"></span>
+				</span>
+			</a>
+		</div>
+	</div>
+	<div class="container">
+		<h2 class="menu_title">Menu Navigasi</h2>
+		<ul class="list_load">
+			<li class="list_item"><a href="#artikel">Artikel</a></li>
+			<li class="list_item"><a href="#">Info Rumah Sakit</a></li>
+			<li class="list_item"><a href="#">Chatbot</a></li>
+		</ul>
+	</div>
+</div>
     
     <div class="text-center bg-blue-900 p-4 sm:p-6 md:p-10 lg:p-12">
         <img src="{{url_for('static', filename='/img/Logo1.png')}}" alt="Logo Divistant" class="bg-blue-900 mx-auto" style="width: 200px;">
@@ -32,7 +54,7 @@
       
 
     <!-- artikel -->
-    <div class="bg-white dark:bg-gray-800">
+    <div class="bg-white dark:bg-gray-800" id="artikel">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none" class="bg-white">
             <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="bg-white dark:fill-blue-900">
             </path>
@@ -40,13 +62,13 @@
     </div>
     <h4 class="text-2xl sm:text-3xl font-bold text-center bg-white mb-6 sm:mb-9 mt-9">Ingin membaca kabar terbaru mengenai kesehatan?</h4>
 
-    <section class="bg-blue-900 border mx-4 sm:mx-8 md:mx-12 lg:mx-40 rounded-xl mb-60 mt-32">
+    <section class="bg-blue-900 border mx-4 sm:mx-8 md:mx-12 lg:mx-40 rounded-xl mb-60 mt-32" >
         <div class="container mx-auto px-4 sm:px-6 md:px-8 py-8 sm:py-10 md:py-12 lg:py-16 max-w-full lg:max-w-6xl">
             <div class="flex flex-col md:flex-row gap-4 sm:gap-8 md:gap-12 items-center">
                 <!-- Image Column -->
                 <div class="w-full md:w-1/2">
                     <img 
-                        src="{{url_for('static', filename='/img/cek.jpg')}}" 
+                        src="{{url_for('static', filename='/img/diabetes.jpg')}}" 
                         alt="Article Preview" 
                         class="rounded-lg w-full object-cover shadow-md"
                     >
@@ -127,7 +149,7 @@
                         </div>
                         
                         <div class="bg-white shadow-lg rounded-lg p-6">
-                        
+
                             <img src="{{url_for('static', filename='/img/cek.jpg')}}" alt="In-app card controls, freeze & unfreeze in a tap" class="mb-4 rounded-md block mx-auto">
                         
                             <h3 class="text-lg font-medium text-gray-800 mb-2">RS Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, ut.</h3>
@@ -156,7 +178,7 @@
                 </path>
             </svg>
 
-           <div class="bg-white text-center  ">
+           <div class="bg-white text-center">
                 <p class="mx-auto max-w-2xl text-lg sm:text-base font-sans mb-20 bg-white pt-32 ">
                     Butuh jawaban cepat atau dukungan langsung? Gunakan fitur chatbot kami, Divister! Chatbot ini siap menjawab pertanyaan seputar diabetes, memberikan tips kesehatan, dan membantu Anda mencari informasi yang Anda butuhkan, kapan pun dan di mana pun. Divister ada untuk mendampingi Anda dengan informasi yang tepat dan dukungan yang responsif.
                 </p>
@@ -175,11 +197,11 @@
             <div class="max-w-md mx-auto text-center">
                 <!-- Logo atau ikon -->
                 <div class="flex justify-center mb-2">
-                    <img src="{{url_for('static', filename='/img/Footer_Logo.png')}}" class="w-16 h-16" >
+                    <img src="{{url_for('static', filename='/img/Footer_Logo.png')}}" class="w-12 h-12" style="width: 70;">
                 </div>
                 
                 <!-- Teks copyright -->
-                <p class="text-gray-400 text-sm mt-1">&copy; 2024 Divistant </p>
+                <p class="text-gray-400 text-sm mt-1">&copy; 2024 Divistant owner</p>
             </div>
         </footer>
         
@@ -208,5 +230,8 @@
           }
         }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
+
 </html>
