--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body >
 
     
-<div class="side_menu">
+<!-- <div class="side_menu">
 	<div class="burger_box">
 		<div class="menu-icon-container">
 			<a href="#" class="menu-icon js-menu_toggle closed">
@@ -35,8 +35,8 @@
 			<li class="list_item"><a href="#">Chatbot</a></li>
 		</ul>
 	</div>
-</div>
-    
+</div> -->
+
     <div class="text-center bg-blue-900 p-4 sm:p-6 md:p-10 lg:p-12">
         <img src="{{url_for('static', filename='/img/Logo1.png')}}" alt="Logo Divistant" class="bg-blue-900 mx-auto" style="width: 200px;">
         <h5 class="font-bold text-center text-white font-sans text-base sm:text-lg md:text-xl">Divistant, Sahabat Virtual untuk Hidup Lebih Sehat Bersama Diabetes.</h5>
