--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <title>Divistant - Sahabat Virtual untuk Hidup Lebih Sehat</title>
 </head>
 <body >
-
+        {% include 'layout/navbar.html'%}
     <div class="text-center bg-blue-900 p-4 sm:p-6 md:p-10 lg:p-12">
         <img src="{{url_for('static', filename='/img/Logo1.png')}}" alt="Logo Divistant" class="bg-blue-900 mx-auto" style="width: 200px;">
         <h5 class="font-bold text-center text-white font-sans text-base sm:text-lg md:text-xl">Divistant, Sahabat Virtual untuk Hidup Lebih Sehat Bersama Diabetes.</h5>
