--- a/templates/Hospital.html
+++ b/templates/Hospital.html
@@ -11,7 +11,9 @@
 </head>
 <body class="bg-blue-800 p-4 md:p-10 font-sans">
     <div class="container mx-auto p-4">
-
+        <div class="mb-10">
+        {% include 'layout/navbar.html'%}
+    </div>
         <h1 class="text-center text-white font-semibold text-2xl mb-12  ">Rumah sakit terdekat dengan anda</h1>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
             <div class="bg-white shadow-md rounded-lg overflow-hidden">
