--- a/templates/article.html
+++ b/templates/article.html
@@ -14,7 +14,10 @@
 
   <!-- Hero Section -->
  
-  <section class="bg-blue-900">
+  <section class="bg-blue-900 ">
+    <div class="p-4 sm:p-6 md:p-10 lg:p-12">
+    {% include 'layout/navbar.html'%}
+  </div>
     <section class="max-w-6xl mx-auto p-4 md:p-8 mb-10">
       <h1 class="text-white mx-10 mt-12 text-center font-extrabold text-4xl">
         Baca artikel mengenai kesehatan anda di sini!
