--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -1,12 +1,23 @@
-<nav class="navbar bg-white shadow-lg rounded-xl  flex items-center justify-start p-8  ">
-  <!-- <div class="logo text-uppercase font-source-sans-pro font-light text-xl">
-    <img src="{{url_for('static', filename='/img/cek.jpg')}}" alt="">
-  </div> -->
-  <ul class="ml-16 flex space-x-8 border border-red-900">
-    <li><a href="#" class="text-black no-underline px-4 py-1 font-source-sans-pro font-normal hover:text-gray-500 transition duration-300">Webdesign</a></li>
-    <li><a href="#" class="text-black no-underline px-4 py-1 font-source-sans-pro font-normal hover:text-gray-500 transition duration-300">Content</a></li>
-    <li><a href="#" class="text-black no-underline px-4 py-1 font-source-sans-pro font-normal hover:text-gray-500 transition duration-300">About</a></li>
-    <li><a href="#" class="text-black no-underline px-4 py-1 font-source-sans-pro font-normal hover:text-gray-500 transition duration-300">Portfolio</a></li>
-    <li><a href="#" class="text-black no-underline px-4 py-1 font-source-sans-pro font-normal hover:text-gray-500 transition duration-300">Contact</a></li>
+<nav class="bg-white shadow-lg rounded-xl flex items-center justify-center p-5">
+  <ul class="ml-16 flex space-x-8">
+    <li>
+      <a href="#" 
+         class="text-black no-underline px-4 py-1 font-normal hover:text-gray-500 transition duration-300">
+        Home
+      </a>
+    </li>
+    <li>
+      <a href="{{ url_for('artikel') }}" 
+         class="text-black no-underline px-4 py-1 font-normal hover:text-gray-500 transition duration-300">
+        Artikel
+      </a>
+    </li>
+    <li>
+      <a href="{{ url_for('cek_rs') }}" 
+         class="text-black no-underline px-4 py-1 font-normal hover:text-gray-500 transition duration-300">
+        Rekomendasi
+      </a>
+    </li>
   </ul>
 </nav>
+
